--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "2.0.1",
+    "@mantine/core": "^8.0.0",
+    "@mantine/dates": "^8.0.0",
+    "@mantine/form": "^8.0.0",
+    "@mantine/hooks": "^8.0.0",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "esri-leaflet-geocoder": "2.3.3",
