--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
     "react-router-dom": "6.10.0",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
-    "swiper": "^9.1.1"
+    "swiper": "^9.1.1",
+    "world-countries": "^5.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
