adding redirect url for auth0

--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,5 @@
-VITE_BASE_URL=http://localhost:8000/api
-VITE_BACKEND_URL=http://localhost:8000
+VITE_BASE_URL=https://real-estate-beta-brown.vercel.app/api
+VITE_BACKEND_URL=https://real-estate-beta-brown.vercel.app
 
 VITE_AUTH0_DOMAIN=dev-l1kjyz1cvvvdt2zz.us.auth0.com
 VITE_AUTH0_CLIENT_ID=DwQFjm2OYFFpHlJcDl1ij495sEQ4fbEk
@@ -7,3 +7,5 @@ VITE_AUTH0_CLIENT_SECRET=Ma5OrBrUkei6MVgH94LCrASU1S1RQTsqHDRV87TAlztbEPxCe0JERAt
 
 VITE_CLOUDINARY_NAME=dete0lvbp
 VITE_CLOUDINARY_UPLOAD_PRESET=vx0dyjgc
+
+https://real-estate-beta-brown.vercel.app
